--- a/blog.html
+++ b/blog.html
@@ -43,18 +43,18 @@
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Accordion Item #2
+                        Block Scope And Global Scope
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                        A variable’s scope is the part of a program where it is available for use.
+                        JavaScript variables are lexically scoped, meaning that we can determine a variable’s scope from
+                        where it is declared in the source code.We can create variables with the let, const, and var
+                        declarations.In ES6 let and const, block scoping works as block act.we can not use these two
+                        variables outside their scope. However, var behaves differently.var can be access anywhere in
+                        the javascript file.
                     </div>
                 </div>
             </div>
@@ -62,18 +62,16 @@
                 <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Accordion Item #3
+                        JavaScript Event Loop
                     </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                        The event loop is the secret behind JavaScript’s asynchronous programming. JS executes all
+                        operations on a single thread, but using a few smart data structures, it gives us the illusion
+                        of multi-threading. An event loop is something that pulls stuff out of the queue and places it
+                        onto the function execution stack whenever the function stack becomes empty.
                     </div>
                 </div>
             </div>
@@ -81,18 +79,16 @@
                 <h2 class="accordion-header" id="headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        Accordion Item #4
+                        Different Ways Of Getting Undefined
                     </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                        Undefined is a primitive value in JavaScript. A variable or an object has an undefined
+                        value when no value is assigned before using it.
+                        We can get undefined value when we call a non-existent property or method of an object or
+                        variables.
                     </div>
                 </div>
             </div>
